--- a/css/style.css
+++ b/css/style.css
@@ -16,11 +16,12 @@ body {
 
 #navbar {
 	background-color: #00456D;
-	color: #00456D;
+	text-align: center;
 }
 
-#navbar button {
+#navbar a {
 	margin-right: 30px;
+    color: #fff;
 }
 
 .navbar-brand {
@@ -39,7 +40,7 @@ body {
 	margin-right: 100px;
 }
 
-.gap-3 button{
+.gap-3 a{
 	margin-bottom: 20px;
 }
 
@@ -47,7 +48,7 @@ body {
 	margin-top: 10px;
 }
 
-.main button {
+.main a {
 	margin-top: 30px;
 	margin-right: 10px;
 }
